--- a/sa-token-demo-oauth2-server/src/main/resources/templates/login.html
+++ b/sa-token-demo-oauth2-server/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>锐狐RAM单点登录入口</title>
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/index.css">
     <link rel="stylesheet" type="text/css" href="/fonts/iconfont.css">
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.5.0/axios.js"></script>
 </head>
