--- a/sa-token-demo-oauth2-server/src/main/resources/templates/reset.html
+++ b/sa-token-demo-oauth2-server/src/main/resources/templates/reset.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>锐狐RAM单点登录入口</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="../static/index.css">
     <link rel="stylesheet" type="text/css" href="../static/fonts/iconfont.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
